update comments, add doc strings

--- a/tutorial/kg-graph-embeddings.ipynb
+++ b/tutorial/kg-graph-embeddings.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "adaptive-gossip",
+   "id": "medical-specification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "decimal-barrel",
+   "id": "later-addiction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,13 @@
     "output_path = \"/Volumes/saggu-ssd/projects\"\n",
     "# output_path = \"/Users/pedroszekely/Downloads/kypher/projects\"\n",
     "\n",
-    "project_name = \"tutorial-graph-embeddings\"\n",
-    "\n"
+    "project_name = \"tutorial-graph-embeddings\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "marine-property",
+   "id": "biological-tumor",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "material-experiment",
+   "id": "molecular-production",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "radio-reducing",
+   "id": "novel-cameroon",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "great-packing",
+   "id": "steady-darkness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extended-hungary",
+   "id": "informal-complexity",
    "metadata": {},
    "source": [
     "## Compute ComplEx Graph Embeddings"
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-elimination",
+   "id": "aerial-wagner",
    "metadata": {},
    "source": [
     "In this notebook we will compute graph embeddings using `kgtk graph-embeddings` command for the `arnold` subgraph and demonstrate a few applications.\n",
@@ -168,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "lasting-repair",
+   "id": "closing-wellington",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,15 +178,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "concrete-royalty",
+   "id": "perceived-surfing",
    "metadata": {},
    "source": [
-    "#### Compute the `ComplEx` graph embeddings"
+    "### Run `kgtk graph-embeddings`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "reasonable-paragraph",
+   "id": "million-hierarchy",
    "metadata": {},
    "source": [
     "The `kgtk graph-embeddings` command takes as input a KGTK edge file and computes graph embeddings of user specified type, producing vectors of user specified dimensions.\n",
@@ -207,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "hidden-auction",
+   "id": "spanish-accuracy",
    "metadata": {},
    "outputs": [
     {
@@ -235,16 +234,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "living-resort",
+   "id": "multiple-dover",
    "metadata": {},
    "source": [
-    "Take a peek at the embeddings file."
+    "#### Take a peek at the embeddings file."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "human-applicant",
+   "id": "designing-sussex",
    "metadata": {},
    "outputs": [
     {
@@ -375,16 +374,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tested-afternoon",
+   "id": "aerial-bobby",
    "metadata": {},
    "source": [
-    "#### The output is in `kgtk` format. Convert it to `word2vec` format for `gensim` similarity computation"
+    "### The output is in `kgtk` format. Convert it to `word2vec` format for `gensim` similarity computation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "taken-allowance",
+   "id": "extensive-hayes",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "rubber-catalyst",
+   "id": "coral-briefs",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,16 +425,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "romantic-messenger",
+   "id": "confident-stream",
    "metadata": {},
    "source": [
-    "#### Load the vectos into `gensim`"
+    "### Load the vectors into `gensim`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "protecting-acoustic",
+   "metadata": {},
+   "source": [
+    "To find similar vectors based on cosine similarity"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "freelance-optimization",
+   "id": "selected-suffering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "agreed-batch",
+   "id": "silver-sacrifice",
    "metadata": {},
    "source": [
     "Define a function to compute the `topn` similar vectors, and get the labels and descriptions of the matching Qnodes."
@@ -452,8 +459,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "broadband-madness",
+   "execution_count": 54,
+   "id": "settled-stable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,14 +468,22 @@
     "    vectors,\n",
     "    positive,\n",
     "    relation_label=\"similarity_score\",\n",
-    "    kg_path=None,\n",
     "    add_label_description=True,\n",
     "    output_path=None,\n",
     "    topn=25,\n",
     "):\n",
-    "    \"\"\"\"\"\"\n",
+    "    \"\"\"\n",
+    "    find topn similar Qnodes, add label and decription for the Qnodes\n",
+    "    \n",
+    "    :param vectors: vector space loaded into gensim KeyedVectors model\n",
+    "    :param positive: vector(s) or Qnode(s) to find similar entities for\n",
+    "    :param relation_label: name of the property to be used for the output file\n",
+    "    :param add_label_description: boolean parameter to add label and description for matched entities\n",
+    "    :param output_path: path to store the output file\n",
+    "    :param topn: desirednumber of similar entities\n",
+    "    \"\"\"\n",
     "    result = []\n",
-    "    if add_label_description and kg_path:\n",
+    "    if add_label_description:\n",
     "        fp = tempfile.NamedTemporaryFile(\n",
     "            mode=\"w\", suffix=\".tsv\", delete=False, encoding=\"utf-8\"\n",
     "        )\n",
@@ -508,7 +523,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "damaged-dutch",
+   "id": "coupled-canal",
+   "metadata": {},
+   "source": [
+    "### Link Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "reliable-institution",
    "metadata": {},
    "source": [
     "The following code reads the vectors for Qnodes as `head` and Properties as `relation`.\n",
@@ -519,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "numerous-inspection",
+   "id": "legislative-southwest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reliable-exclusion",
+   "id": "functional-hanging",
    "metadata": {},
    "source": [
     "The following function takes as input a `Qnode` and a `Property`, and outputs a vector which should be similar to the value of the relation.\n",
@@ -572,8 +595,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "responsible-guess",
+   "execution_count": 56,
+   "id": "interim-recipient",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,6 +604,8 @@
     "    ''' This function generate the embeddings for the tail entities:\n",
     "            Head entities: Obtained from the model\n",
     "            Head + relation: Obtained using torch\n",
+    "        :param head: subject Qnode\n",
+    "        :param relation: optional property\n",
     "    '''\n",
     "    if relation is None:\n",
     "        return arnold_embedding[entity_to_index[head], :].detach().numpy()\n",
@@ -592,16 +617,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liked-killing",
+   "id": "modular-commission",
    "metadata": {},
    "source": [
-    "Get the vector for `Q37079` (Tom Cruise) + `P166` (award received), then find most similar entities"
+    "#### Get the vector for `Q37079` (Tom Cruise) + `P166` (award received), then find most similar entities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "improving-closer",
+   "execution_count": 57,
+   "id": "opposite-release",
    "metadata": {},
    "outputs": [
     {
@@ -733,28 +758,28 @@
        "7                                         'award'@en  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "_vector = get_embed('Q37079', 'P166')\n",
-    "kgtk_most_similar(ge_vectors, positive=_vector, kg_path = os.environ['TEMP'], topn=10)"
+    "kgtk_most_similar(ge_vectors, positive=_vector, topn=10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "educated-highlight",
+   "id": "revolutionary-index",
    "metadata": {},
    "source": [
-    "Get the vector for `Q170564` (Terminator 2: Judgement Day) + `P161` (cast member), then find most similar entities"
+    "#### Get the vector for `Q170564` (Terminator 2: Judgement Day) + `P161` (cast member), then find most similar entities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "lesser-newsletter",
+   "execution_count": 58,
+   "id": "medical-membership",
    "metadata": {},
    "outputs": [
     {
@@ -896,28 +921,28 @@
        "9  'American actor, comedian, singer, and musicia...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "_vector = get_embed('Q170564', 'P161')\n",
-    "kgtk_most_similar(ge_vectors, positive=_vector, kg_path = os.environ['TEMP'], topn=10)"
+    "kgtk_most_similar(ge_vectors, positive=_vector, topn=10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "binary-gossip",
+   "id": "elementary-louisiana",
    "metadata": {},
    "source": [
-    "Get the vector for `Q104123` (Pulp Fiction) + `P161` (cast member), then find most similar entities"
+    "#### Get the vector for `Q104123` (Pulp Fiction) + `P161` (cast member), then find most similar entities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "altered-struggle",
+   "execution_count": 59,
+   "id": "published-trainer",
    "metadata": {},
    "outputs": [
     {
@@ -1059,28 +1084,28 @@
        "9                                'American actor'@en  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "_vector = get_embed('Q104123', 'P161')\n",
-    "kgtk_most_similar(ge_vectors, positive=_vector, kg_path = os.environ['TEMP'], topn=10)"
+    "kgtk_most_similar(ge_vectors, positive=_vector, topn=10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "successful-plaintiff",
+   "id": "determined-hindu",
    "metadata": {},
    "source": [
-    "Get the vector for `Q2685` (Arnold Schwarzenegger), then find most similar entities"
+    "#### Get the vector for `Q2685` (Arnold Schwarzenegger), then find most similar entities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "regular-ethernet",
+   "execution_count": 60,
+   "id": "fancy-actress",
    "metadata": {},
    "outputs": [
     {
@@ -1222,28 +1247,28 @@
        "9                                 'film director'@en  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "_vector = get_embed('Q2685')\n",
-    "kgtk_most_similar(ge_vectors, positive=_vector, kg_path = os.environ['TEMP'], topn=10)"
+    "kgtk_most_similar(ge_vectors, positive=_vector, topn=10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "drawn-buddy",
+   "id": "homeless-catering",
    "metadata": {},
    "source": [
-    "Get the vector for `Q103148` (Lahn River), then find most similar entities"
+    "#### Get the vector for `Q103148` (Lahn River), then find most similar entities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "loaded-compound",
+   "execution_count": 62,
+   "id": "modern-toyota",
    "metadata": {},
    "outputs": [
     {
@@ -1385,19 +1410,19 @@
        "9                              'river in Germany'@en  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "_vector = get_embed('Q103148')\n",
-    "kgtk_most_similar(ge_vectors, positive=_vector, kg_path = os.environ['TEMP'], topn=10)"
+    "kgtk_most_similar(ge_vectors, positive=_vector, topn=10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bacterial-victoria",
+   "id": "civic-limit",
    "metadata": {},
    "source": [
     "## Prepare files for Google Projector"
@@ -1405,7 +1430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polyphonic-colors",
+   "id": "catholic-awareness",
    "metadata": {},
    "source": [
     "In this section, we will prepare `vectors` and `metadata` files for google projector.\n",
@@ -1430,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "sapphire-mentor",
+   "id": "invalid-tablet",
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-fitting",
+   "id": "faced-annotation",
    "metadata": {},
    "source": [
     "#### Take a peek at the file"
@@ -1476,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "excessive-noise",
+   "id": "instant-internship",
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cultural-ontario",
+   "id": "forward-possession",
    "metadata": {},
    "source": [
     "#### Define a function to build the required files for google projector"
@@ -1660,12 +1685,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "exciting-uganda",
+   "execution_count": 63,
+   "id": "alien-density",
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_embedding_projector_metadata(gp_embeddings_path, metadata_path, vectors_path):\n",
+    "    \"\"\"\n",
+    "    build the vector and metadata files required for google projector\n",
+    "    \n",
+    "    :param gp_embeddings_path: file path which has the embeddings and metadata in kgtk format\n",
+    "    :param metadata_path: output file path for metadata\n",
+    "    :param vectors_path: output file path for vectors\n",
+    "    \"\"\"\n",
     "    metadata_file = open(metadata_path, \"w\")\n",
     "    metadata_file.write(\"tag\\tqnode\\ttype\\ttype_label\\n\")\n",
     "\n",
@@ -1693,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "editorial-dragon",
+   "id": "shaped-chosen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,16 +1736,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "leading-department",
+   "id": "unexpected-hazard",
    "metadata": {},
    "source": [
-    "Peek at the metadata file"
+    "#### Peek at the metadata file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "proof-stocks",
+   "id": "sudden-vampire",
    "metadata": {},
    "outputs": [
     {
@@ -1843,16 +1875,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prescription-albany",
+   "id": "sacred-composite",
    "metadata": {},
    "source": [
-    "Peek at the vectors file"
+    "#### Peek at the vectors file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "banned-defendant",
+   "id": "contrary-excess",
    "metadata": {},
    "outputs": [
     {
@@ -1870,7 +1902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bibliographic-yellow",
+   "id": "weird-essex",
    "metadata": {},
    "source": [
     "## Google embedding projector\n",
@@ -1884,7 +1916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ultimate-canyon",
+   "id": "referenced-living",
    "metadata": {},
    "source": [
     "#### PCA visualization of the embeddings, colored by `instance of`"
@@ -1892,7 +1924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "federal-artist",
+   "id": "conscious-retirement",
    "metadata": {},
    "source": [
     "![UMAP Color by Type](assets/gp-color-map-types.png \"UMAP Color by Type\")"
@@ -1901,7 +1933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "offshore-ghana",
+   "id": "progressive-vietnamese",
    "metadata": {},
    "outputs": [],
    "source": []
