--- a/tutorial/03-kg-graph-embeddings.ipynb
+++ b/tutorial/03-kg-graph-embeddings.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "medical-specification",
+   "id": "stuffed-forge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "later-addiction",
+   "id": "valued-space",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "biological-tumor",
+   "id": "dramatic-marker",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "molecular-production",
+   "id": "operational-boost",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "novel-cameroon",
+   "id": "typical-mustang",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "steady-darkness",
+   "id": "appointed-holly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informal-complexity",
+   "id": "sensitive-shade",
    "metadata": {},
    "source": [
     "## Compute ComplEx Graph Embeddings"
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aerial-wagner",
+   "id": "specified-garbage",
    "metadata": {},
    "source": [
     "In this notebook we will compute graph embeddings using `kgtk graph-embeddings` command for the `arnold` subgraph and demonstrate a few applications.\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "closing-wellington",
+   "id": "confused-motorcycle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perceived-surfing",
+   "id": "associate-italic",
    "metadata": {},
    "source": [
     "### Run `kgtk graph-embeddings`"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "million-hierarchy",
+   "id": "ranging-guide",
    "metadata": {},
    "source": [
     "The `kgtk graph-embeddings` command takes as input a KGTK edge file and computes graph embeddings of user specified type, producing vectors of user specified dimensions.\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "spanish-accuracy",
+   "id": "stone-monaco",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "multiple-dover",
+   "id": "accepted-merchandise",
    "metadata": {},
    "source": [
     "#### Take a peek at the embeddings file."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "designing-sussex",
+   "id": "extended-preference",
    "metadata": {},
    "outputs": [
     {
@@ -374,16 +374,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aerial-bobby",
+   "id": "pretty-summary",
    "metadata": {},
    "source": [
-    "### The output is in `kgtk` format. Convert it to `word2vec` format for `gensim` similarity computation"
+    "### The output is in `kgtk` format. Convert it to `word2vec` format for `gensim` similarity computation\n",
+    "\n",
+    "\n",
+    "For reference: \n",
+    "- [gensim](https://radimrehurek.com/gensim/)\n",
+    "- [word2vec](https://en.wikipedia.org/wiki/Word2vec)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "extensive-hayes",
+   "id": "packed-minority",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "coral-briefs",
+   "id": "pursuant-beach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confident-stream",
+   "id": "optimum-anchor",
    "metadata": {},
    "source": [
     "### Load the vectors into `gensim`"
@@ -433,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protecting-acoustic",
+   "id": "fossil-cinema",
    "metadata": {},
    "source": [
     "To find similar vectors based on cosine similarity"
@@ -442,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "selected-suffering",
+   "id": "suffering-myrtle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "silver-sacrifice",
+   "id": "hollywood-likelihood",
    "metadata": {},
    "source": [
     "Define a function to compute the `topn` similar vectors, and get the labels and descriptions of the matching Qnodes."
@@ -460,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "settled-stable",
+   "id": "photographic-pearl",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coupled-canal",
+   "id": "improving-candle",
    "metadata": {},
    "source": [
     "### Link Prediction"
@@ -531,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reliable-institution",
+   "id": "assisted-british",
    "metadata": {},
    "source": [
     "The following code reads the vectors for Qnodes as `head` and Properties as `relation`.\n",
@@ -542,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "legislative-southwest",
+   "id": "spoken-association",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "functional-hanging",
+   "id": "seeing-attitude",
    "metadata": {},
    "source": [
     "The following function takes as input a `Qnode` and a `Property`, and outputs a vector which should be similar to the value of the relation.\n",
@@ -596,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "interim-recipient",
+   "id": "retired-attraction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modular-commission",
+   "id": "retired-corrections",
    "metadata": {},
    "source": [
     "#### Get the vector for `Q37079` (Tom Cruise) + `P166` (award received), then find most similar entities"
@@ -626,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "opposite-release",
+   "id": "molecular-supplement",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revolutionary-index",
+   "id": "colonial-bolivia",
    "metadata": {},
    "source": [
     "#### Get the vector for `Q170564` (Terminator 2: Judgement Day) + `P161` (cast member), then find most similar entities"
@@ -779,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "medical-membership",
+   "id": "armed-federation",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elementary-louisiana",
+   "id": "driving-insight",
    "metadata": {},
    "source": [
     "#### Get the vector for `Q104123` (Pulp Fiction) + `P161` (cast member), then find most similar entities"
@@ -942,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "published-trainer",
+   "id": "helpful-secret",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "determined-hindu",
+   "id": "indian-joseph",
    "metadata": {},
    "source": [
     "#### Get the vector for `Q2685` (Arnold Schwarzenegger), then find most similar entities"
@@ -1105,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "fancy-actress",
+   "id": "burning-green",
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "homeless-catering",
+   "id": "romance-adrian",
    "metadata": {},
    "source": [
     "#### Get the vector for `Q103148` (Lahn River), then find most similar entities"
@@ -1268,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "modern-toyota",
+   "id": "diverse-museum",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civic-limit",
+   "id": "beautiful-branch",
    "metadata": {},
    "source": [
     "## Prepare files for Google Projector"
@@ -1430,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "catholic-awareness",
+   "id": "together-paper",
    "metadata": {},
    "source": [
     "In this section, we will prepare `vectors` and `metadata` files for google projector.\n",
@@ -1455,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "invalid-tablet",
+   "id": "simplified-implementation",
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faced-annotation",
+   "id": "civilian-metro",
    "metadata": {},
    "source": [
     "#### Take a peek at the file"
@@ -1501,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "instant-internship",
+   "id": "raising-drink",
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forward-possession",
+   "id": "respective-employer",
    "metadata": {},
    "source": [
     "#### Define a function to build the required files for google projector"
@@ -1686,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "alien-density",
+   "id": "formed-metabolism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1725,7 +1730,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "shaped-chosen",
+   "id": "pointed-lunch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unexpected-hazard",
+   "id": "moved-mercy",
    "metadata": {},
    "source": [
     "#### Peek at the metadata file"
@@ -1745,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "sudden-vampire",
+   "id": "acoustic-oliver",
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sacred-composite",
+   "id": "alpine-estonia",
    "metadata": {},
    "source": [
     "#### Peek at the vectors file"
@@ -1884,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "contrary-excess",
+   "id": "patient-mozambique",
    "metadata": {},
    "outputs": [
     {
@@ -1902,7 +1907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "weird-essex",
+   "id": "under-angola",
    "metadata": {},
    "source": [
     "## Google embedding projector\n",
@@ -1916,7 +1921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "referenced-living",
+   "id": "rolled-falls",
    "metadata": {},
    "source": [
     "#### PCA visualization of the embeddings, colored by `instance of`"
@@ -1924,7 +1929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conscious-retirement",
+   "id": "respective-buying",
    "metadata": {},
    "source": [
     "![UMAP Color by Type](assets/gp-color-map-types.png \"UMAP Color by Type\")"
@@ -1933,7 +1938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "progressive-vietnamese",
+   "id": "wicked-cedar",
    "metadata": {},
    "outputs": [],
    "source": []
