You can pass a datafram as an input to the kgtk(...) function.

--- a/tutorial/04-kg-enrichment-with-csv.ipynb
+++ b/tutorial/04-kg-enrichment-with-csv.ipynb
@@ -214,11 +214,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Survey the data in the IMDb file\n",
     "\n",
@@ -1185,9 +1180,6 @@
    ],
    "source": [
     "imdb_kg = imdb.rename(columns={'imdb_title_id':'id'})\n",
-    "\n",
-    "imdb_kg.to_csv(os.environ[\"TEMP\"] + \"/imdb-kg-bad-header.tsv\", sep=\"\\t\", encoding='utf-8', index=False, quoting=csv.QUOTE_NONNUMERIC)\n",
-    "\n",
     "imdb_kg"
    ]
   },
@@ -1200,33 +1192,6 @@
     "\n",
     "The IMDb KG is completely isolated from our KG, but it is still a valid KG that we4 can manipulate in KGTK:\n",
     "> In KGTK, literals, such as the string identifiers of movies, can be used as the subjects (`node1`) of triples."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## To-Do: avoid this cell\n",
-    "\n",
-    "The problem is that the output of of the previous cell puts quotes around the column headings. I manually edited the file to remove the quotes and stored it in the inpuppt folder, so now we need to copy it `$TEMP`, somehow !cp {input_path} $TEMP is not working for me.\n",
-    "\n",
-    "Amandeep or Craig: in the previous cell we want to write the dataframe as a node file, with all non-numeric columns converted to strings, but the headings should not be strings."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = input_path + \"/../imdb/imdb-kg-node.tsv\"\n",
-    "output_path = os.environ['TEMP'] + \"/imdb-kg-node.tsv\"\n",
-    "with open(path, 'r') as file:\n",
-    "    with open(output_path, 'w') as o:\n",
-    "        for line in file:\n",
-    "            o.write(line)\n",
-    "        o.close()\n",
-    "    file.close()"
    ]
   },
   {
@@ -1371,8 +1336,8 @@
    ],
    "source": [
     "%%time\n",
-    "kgtk(\"\"\"\n",
-    "    normalize-nodes -i $TEMP/imdb-kg-node.tsv\n",
+    "kgtk(imdb_kg, \"\"\"\n",
+    "    normalize-nodes\n",
     "\"\"\")"
    ]
   },
@@ -1459,9 +1424,8 @@
    ],
    "source": [
     "%%time\n",
-    "kgtk(\"\"\"\n",
-    "    normalize-nodes -i $TEMP/imdb-kg-node.tsv\n",
-    "    -o $TEMP/imdb-kg-edge.tsv\n",
+    "kgtk(imdb_kg, \"\"\"\n",
+    "    normalize-nodes -o $TEMP/imdb-kg-edge.tsv\n",
     "\"\"\")\n",
     "\n",
     "kgtk(\"query -i $TEMP/imdb-kg-edge.tsv --as imdbkg --limit 3\")"
